--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@ body {
 
 .logo img {
     height: 40px;
+    max-height: 40px;
+    width: auto;
+    max-width: 120px;
+    object-fit: contain;
 }
 
 .logo-text {
