--- a/templates/hotel-results.html
+++ b/templates/hotel-results.html
@@ -35,14 +35,17 @@
 
                     <ul class="nav-menu" id="navMenu">
                         <li><a href="index.html" class="nav-link">Home</a></li>
-                        <li><a href="index.html#flights" class="nav-link">Flights</a></li>
-                        <li><a href="index.html#hotels" class="nav-link active">Hotels</a></li>
-                        <li><a href="index.html#deals" class="nav-link">Deals</a></li>
+                        <li><a href="flight-booking.html" class="nav-link">Flights</a></li>
+                        <li><a href="hotel-booking.html" class="nav-link active">Hotels</a></li>
+                        <li><a href="visa.html" class="nav-link">Visa</a></li>
                         <li><a href="index.html#contact" class="nav-link">Contact</a></li>
                     </ul>
 
                     <div class="nav-actions">
-                        <a href="#" class="btn btn-outline" id="loginBtn">
+                        <a href="javascript:history.back()" class="btn btn-outline" style="margin-right: 10px;">
+                            <i class="fas fa-arrow-left"></i> Back
+                        </a>
+                        <a href="auth.html" class="btn btn-outline" id="loginBtn">
                             <i class="fas fa-user"></i> Login
                         </a>
                     </div>
@@ -56,6 +59,7 @@
             </div>
         </nav>
     </header>
+
 
     <!-- Main Content -->
     <main class="hotel-results-main">
